[gd_scene load_steps=2 format=3 uid="uid://cse2f5m3qcyek"]

[ext_resource type="Script" uid="uid://duaumcin6wow5" path="res://SYSTEMS/SCREEN_UI/pause_menu.gd" id="1_3rrdd"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_3rrdd")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 180.0
color = Color(0.0666667, 0.0823529, 0.133333, 0.431373)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 108.0
offset_top = 48.0
offset_right = 212.0
offset_bottom = 114.0

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "RESUME"

[node name="Main_menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "MAIN MENU"

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "RESTART"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Main_menu" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
